--- a/sub-html/table.html
+++ b/sub-html/table.html
@@ -83,7 +83,7 @@
         </tr>
     </table>
     <hr>
-    <h3 style="color:rgb(8, 0, 255)">
+    <h3 style="color:rgb(8, 0, 255);">
         Skills
     </h3>
     <!-- well alternate table-->
