adding background colors

--- a/sub-html/contact.html
+++ b/sub-html/contact.html
@@ -5,7 +5,7 @@
     <title>Contact Me</title>
 </head>
 
-<body>
+<body style="background-color:rgb(248, 239, 134);">
     <h3>
         Contact details
     </h3>
