--- a/sub-html/hobbies.html
+++ b/sub-html/hobbies.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="">
 </head>
 
-<body>
+<body style="background-color:rgb(248, 239, 134);">
     <h3>Hobbies</h3>
     <ol type="i" start="4">
         <li>
