--- a/sub-html/table.html
+++ b/sub-html/table.html
@@ -6,7 +6,7 @@
     <title>arranged way</title>
 </head>
 
-<body>
+<body style="background-color:rgb(248, 239, 134);">
     <table cellspacing="20px">
         <tr>
             <td>
