changed bunch of stuff

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>Prasanth Personal Webpage</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color:rgb(0, 173, 181);">
+<body>
   <img src="image/pic.png" width="150px" height="150px" alt="my pic" />
   <h1>Prasanth Reddy</h1>
   <p><em>Cyber Security Enthusiast</em></p>
