--- a/sub-html/table.html
+++ b/sub-html/table.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>arranged way</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body style="background-color:rgb(0, 173, 181);">
+<body>
     <table cellspacing="20px">
         <tr>
             <td>
@@ -83,7 +84,7 @@
         </tr>
     </table>
     <hr>
-    <h3 style="color:rgb(8, 0, 255);">
+    <h3>
         Skills
     </h3>
     <!-- well alternate table-->
