--- a/sub-html/contact.html
+++ b/sub-html/contact.html
@@ -3,9 +3,10 @@
 
 <head>
     <title>Contact Me</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body style="background-color:rgb(0, 173, 181);">
+<body>
     <h3>
         Contact details
     </h3>
