--- a/sub-html/hobbies.html
+++ b/sub-html/hobbies.html
@@ -7,10 +7,10 @@
     <title>Hobbies</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body style="background-color:rgb(0, 173, 181);">
+<body>
     <h3>Hobbies</h3>
     <ol type="i" start="4">
         <li>
