--- a/sub-html/message-me.html
+++ b/sub-html/message-me.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>message-me</title>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 
-<body style="background-color:rgb(0, 173, 181);">
+<body>
     <form action="mailto:prasanthreddy2121@gmail.com" method="post" enctype="text/plain">
         <label for="name" id="name">Name : </label>
         <input type="text" name="name" id="name">
